[package]
name = "ds3ex"
version = "0.1.0"
edition = "2021"
publish = false
description = "Convert samples from the Greengate DS3 to WAV"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = [ "derive" ] }
hound = "3.5"
